fluxgui (1.1.11~pre) wily; urgency=low

  * update icons: https://github.com/xflux-gui/fluxgui/issues/85,
    https://github.com/xflux-gui/fluxgui/pull/86
  * fix https:/github.com/xflux-gui/fluxgui/issues/79: tray icon
    name was incorrect for some desktop environments.

 -- Nathan Collins <nathan.collins@gmail.com>  <add date here when releasing>

fluxgui (1.1.10) wily; urgency=low

  * fix https://github.com/xflux-gui/xflux-gui/issues/51: some of
    the the color temps I added in 1.1.9 were not actually supported :P
  * fix gtk-icon-theme related warnings. These were innocuous, but
    mentioned in most bug reports.
  * fix https://github.com/xflux-gui/xflux-gui/issues/35: screen color
    was not reset to normal when closing fluxgui.
  * fix https://github.com/xflux-gui/xflux-gui/issues/38: remove confusing
    GUI element.
  * fix https://github.com/xflux-gui/xflux-gui/issues/16: previewing the
    already chosen color during the daytime didn't work.

 -- Nathan Collins <nathan.collins@gmail.com>  Fri, 09 Jun 2017 17:17:32 -0700

fluxgui (1.1.9) wily; urgency=low

  * remove pid file / lock file. We have several bug reports about fluxgui
    failing to start due to stale pid files, but I doubt anyone has the problem
    of accidentally starting multiple copies of fluxgui. We can revisit this
    if it turns out not having the pid file causes problems.
  * fix bug where preview did not work for already chosen temperature.
  * add more color options to the preferences GUI. Some of these options
    used to be supported in older versions, but had gone away at some point.

 -- Nathan Collins <nathan.collins@gmail.com>  Sat, 23 Jul 2016 16:28:45 -0700

fluxgui (1.1.8) lucid; urgency=low

  * add in python-pexpect as a dependency 

 -- Kilian Valkhof <kilian@kilianvalkhof.com>  Wed, 08 Sep 2010 12:12:16 +0200

fluxgui (1.1.7-0ubuntu1) lucid; urgency=low

  * handle xflux closing more gracefully (thanks to axonxorz) 
