@@ -51,10 +51,13 @@ python download-xflux.py
 
 # EITHER install globally
 sudo python setup.py install
-# EXCLUSIVE OR, install in your home directory. The binary installs
-# into ~/.local/bin, so be sure to add that to your PATH if installing locally.
-python setup.py install --user
 
+# EXCLUSIVE OR, install in your home directory. The binary installs
+# into ~/.local/bin, so be sure to add that to your PATH if installing
+# locally. In particular, autostarting fluxgui in Gnome will not work
+# if the locally installed fluxgui is not on your PATH.
+python setup.py install --user
+       
 # Run flux
 fluxgui
 ```
